--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "axios-mock-adapter": "^1.20.0",
     "cypress": "^9.2.0",
     "history": "^5.2.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.2.1",
     "use-debounce": "^7.0.1"
   },
